[BUGFIX] Duplicated identifier 'IteratorResult' https://github.com/microsoft/TypeScript/issues/32333

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   },
   "author": "Hauke Schulz <h.schulz@remind.de> (https://www.remind.de/)",
   "license": "BSD-3-Clause",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/node": "^12.12.14"
+  }
 }
