--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@remindgmbh/util",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Utility functions",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
-    "typescript": "^3.7.2"
+    "typescript": "^3.7.3"
   },
   "scripts": {
-    "postinstall": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "tsc -p .",
+    "test": "nyc mocha"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,12 @@
   "license": "BSD-3-Clause",
   "private": true,
   "devDependencies": {
-    "@types/node": "^12.12.14"
+    "@types/chai": "^4.2.6",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.12.14",
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "nyc": "^14.1.1",
+    "ts-node": "^8.5.4"
   }
 }
