--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "^12.12.14",
     "chai": "^4.2.0",
     "mocha": "^6.2.2",
+    "mocha-junit-reporter": "^1.23.1",
     "nyc": "^14.1.1",
     "ts-node": "^8.5.4"
   }
