--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "@types/node": "^12.12.14",
+    "canvas": "^2.6.0",
     "chai": "^4.2.0",
+    "jsdom": "^15.2.1",
+    "jsdom-global": "^3.0.2",
     "mocha": "^6.2.2",
     "mocha-junit-reporter": "^1.23.1",
     "nyc": "^14.1.1",
