Fixed ts/js interoperability

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "@remindgmbh/util",
   "version": "0.3.0",
   "description": "Utility functions",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "dependencies": {
     "typescript": "^3.7.3"
   },
