--- a/.nycrc
+++ b/.nycrc
@@ -1,4 +1,5 @@
 {
+  "all": true,
   "reporter": [
     "html",
     "text-summary"
@@ -7,9 +8,11 @@
     ".ts"
   ],
   "include": [
-    "src/**/*.ts"
+    "**/*.ts"
   ],
-  "exclude": [],
+  "exclude": [
+    "**/*.d.ts"
+  ],
   "require": [
     "ts-node/register"
   ],
