--- a/package.json
+++ b/package.json
@@ -1,34 +1,35 @@
 {
-  "name": "@remindgmbh/util",
-  "version": "0.3.0",
-  "description": "Utility functions",
-  "main": "index.js",
-  "types": "index.d.ts",
-  "dependencies": {
-    "typescript": "^3.7.3"
-  },
-  "scripts": {
-    "install": "tsc -p .",
-    "test": "nyc mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://bitbucket.org/remindgmbh/remind-util/"
-  },
-  "author": "Hauke Schulz <h.schulz@remind.de> (https://www.remind.de/)",
-  "license": "BSD-3-Clause",
-  "private": true,
-  "devDependencies": {
-    "@types/chai": "^4.2.6",
-    "@types/mocha": "^5.2.7",
-    "@types/node": "^12.12.14",
-    "canvas": "^2.6.0",
-    "chai": "^4.2.0",
-    "jsdom": "^15.2.1",
-    "jsdom-global": "^3.0.2",
-    "mocha": "^6.2.2",
-    "mocha-junit-reporter": "^1.23.1",
-    "nyc": "^14.1.1",
-    "ts-node": "^8.5.4"
-  }
+    "name": "@remindgmbh/util",
+    "version": "0.3.0",
+    "description": "Utility functions",
+    "main": "index.js",
+    "types": "index.d.ts",
+    "dependencies": {
+        "typescript": "^3.7.3"
+    },
+    "scripts": {
+        "install": "tsc -p .",
+        "test": "nyc mocha"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://bitbucket.org/remindgmbh/remind-util/"
+    },
+    "author": "Hauke Schulz <h.schulz@remind.de> (https://www.remind.de/)",
+    "license": "BSD-3-Clause",
+    "private": true,
+    "devDependencies": {
+        "@types/chai": "^4.2.6",
+        "@types/jsdom-global": "^3.0.1",
+        "@types/mocha": "^5.2.7",
+        "@types/node": "^12.12.14",
+        "canvas": "^2.6.0",
+        "chai": "^4.2.0",
+        "jsdom": "^15.2.1",
+        "jsdom-global": "^3.0.2",
+        "mocha": "^6.2.2",
+        "mocha-junit-reporter": "^1.23.1",
+        "nyc": "^14.1.1",
+        "ts-node": "^8.5.4"
+    }
 }
