Overhauled the entire package

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@remindgmbh/util",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "description": "Utility functions",
     "main": "index.js",
     "types": "index.d.ts",
@@ -19,12 +19,15 @@
     "license": "BSD-3-Clause",
     "private": true,
     "devDependencies": {
-        "@types/chai": "^4.2.6",
+        "@types/chai": "^4.2.7",
         "@types/jsdom-global": "^3.0.1",
         "@types/mocha": "^5.2.7",
-        "@types/node": "^12.12.14",
+        "@types/node": "^12.12.17",
+        "@typescript-eslint/eslint-plugin": "^2.11.0",
+        "@typescript-eslint/parser": "^2.11.0",
         "canvas": "^2.6.0",
         "chai": "^4.2.0",
+        "eslint": "^6.7.2",
         "jsdom": "^15.2.1",
         "jsdom-global": "^3.0.2",
         "mocha": "^6.2.2",
