--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
     "name": "@remindgmbh/util",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "description": "Utility functions",
     "main": "index.js",
     "types": "index.d.ts",
     "dependencies": {
-        "typescript": "^3.7.3"
+        "typescript": "^3.8.2"
     },
     "scripts": {
         "install": "tsc -p .",
+        "lint": "eslint ./index.ts ./src/**.ts",
         "test": "nyc mocha"
     },
     "repository": {
@@ -19,20 +20,20 @@
     "license": "BSD-3-Clause",
     "private": true,
     "devDependencies": {
-        "@types/chai": "^4.2.7",
-        "@types/jsdom-global": "^3.0.1",
+        "@types/chai": "^4.2.9",
+        "@types/jsdom-global": "^3.0.2",
         "@types/mocha": "^5.2.7",
-        "@types/node": "^12.12.17",
-        "@typescript-eslint/eslint-plugin": "^2.11.0",
-        "@typescript-eslint/parser": "^2.11.0",
-        "canvas": "^2.6.0",
+        "@types/node": "^12.12.28",
+        "@typescript-eslint/eslint-plugin": "^2.20.0",
+        "@typescript-eslint/parser": "^2.20.0",
+        "canvas": "^2.6.1",
         "chai": "^4.2.0",
-        "eslint": "^6.7.2",
+        "eslint": "^6.8.0",
         "jsdom": "^15.2.1",
         "jsdom-global": "^3.0.2",
         "mocha": "^6.2.2",
-        "mocha-junit-reporter": "^1.23.1",
+        "mocha-junit-reporter": "^1.23.3",
         "nyc": "^14.1.1",
-        "ts-node": "^8.5.4"
+        "ts-node": "^8.6.2"
     }
 }
