--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
     "main": "index.js",
     "types": "index.d.ts",
     "dependencies": {
-        "typescript": "^3.8.2"
+        "typescript": "^3.9.7"
     },
     "scripts": {
-        "install": "tsc -p .",
-        "lint": "eslint ./index.ts ./src/**.ts",
+        "lint": "eslint ./src/**.ts",
         "test": "nyc mocha"
     },
     "repository": {
@@ -20,20 +19,20 @@
     "license": "BSD-3-Clause",
     "private": true,
     "devDependencies": {
-        "@types/chai": "^4.2.9",
+        "@types/chai": "^4.2.14",
         "@types/jsdom-global": "^3.0.2",
-        "@types/mocha": "^5.2.7",
-        "@types/node": "^12.12.28",
-        "@typescript-eslint/eslint-plugin": "^2.20.0",
-        "@typescript-eslint/parser": "^2.20.0",
+        "@types/mocha": "^8.0.3",
+        "@types/node": "^14.14.2",
+        "@typescript-eslint/eslint-plugin": "^4.5.0",
+        "@typescript-eslint/parser": "^4.5.0",
         "canvas": "^2.6.1",
         "chai": "^4.2.0",
-        "eslint": "^6.8.0",
-        "jsdom": "^15.2.1",
+        "eslint": "^7.11.0",
+        "jsdom": "^16.4.0",
         "jsdom-global": "^3.0.2",
-        "mocha": "^6.2.2",
-        "mocha-junit-reporter": "^1.23.3",
-        "nyc": "^14.1.1",
-        "ts-node": "^8.6.2"
+        "mocha": "^8.2.0",
+        "mocha-junit-reporter": "^2.0.0",
+        "nyc": "^15.1.0",
+        "ts-node": "^9.0.0"
     }
 }
