--- a/tsconfig.json
+++ b/tsconfig.json
@@ -63,6 +63,7 @@
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
+  "files": [ "index.ts" ],
   "include": [ "src" ],
   "exclude": [ "node_modules" ]
 }
