--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "name": "@remindgmbh/util",
-    "version": "0.4.1",
-    "description": "Utility functions",
+    "name": "@remindgmbh/typescript-utility-lib",
+    "version": "0.1.0",
+    "description": "Collection of utilities.",
     "main": "index.ts",
     "dependencies": {
-        "typescript": "^3.9.7"
+        "typescript": "^4.0.3"
     },
     "scripts": {
         "lint": "eslint ./src/**.ts",
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://bitbucket.org/remindgmbh/remind-util/"
+        "url": "https://github.com/remindgmbh/typescript-utility-lib"
     },
     "author": "Hauke Schulz <h.schulz@remind.de> (https://www.remind.de/)",
     "license": "BSD-3-Clause",
