--- a/.nycrc.yml
+++ b/.nycrc.yml
@@ -24,3 +24,8 @@ check-coverage: true
 cache: false
 all: true
 temp-directory: "./coverage/.nyc_output"
+
+branches: 85
+lines: 85
+functions: 80
+statements: 85
