--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: node_js
 
+os: linux
+dist: xenial
+
 node_js:
     - 12
     - lts/*
@@ -8,7 +11,7 @@ notifications:
     email:
         on_success: never
 
-scripts:
+script:
   - npm i -g codecov
   - npm i
   - npm test
