Updated library to newer typescript version
* Fixed a possible undefined error in Events.ts
* Updated travis configuration
* Updated build and publish scripts and configuration

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ dist: xenial
 
 node_js:
     - 12
+    - 14
+    - 16
     - lts/*
 
 notifications:
@@ -16,5 +18,5 @@ script:
   - npm i
   - npm test
 
-after_success:
+after_script:
   - codecov
