--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,15 @@
 ### IDE ###
-nbproject
-.vscode
-.idea
+nbproject/
+.vscode/
+.idea/
 
 ### Node ###
-node_modules
-.nyc_output
-coverage
-test-results.xml
+node_modules/
+dist/
 
-### TSC ###
-*.d.ts
-*.d.ts.map
-*.js
-*.js.map
+### General ###
+*.log
+
+### Testing ###
+coverage/
+test-results.xml
